  [Michele Simionato]
  * Fixed the excessive logic tree reduction in event based calculators
  * Improved the command `oq db`
  * Fixed an encoding bug when logging a filename with a non-ASCII character
  * Fixed a bug when exporting a GMF with `ruptureId=0`
  * Added a parameter `disagg_outputs` to specify the kind of disaggregation
    outputs to export
  * Raised an early error if the consequence model is missing some taxonomies
  * Restored the tiling functionality in the classical calculator; to enable
    it, set `num_tiles` in the job.ini file
  * If there are no statistical hazard curves to compute, do not transfer
    anything
  * Fixed a small bug in `oq plot` and added a test

  [Daniele Viganò]
  * Added `collectstatic` and `createsuperuser` subcommands to the
    `oq webui` command
  * Added a `local_settings.py.pam` template to use PAM as the authentication
    provider for API and WebUI
  * Now the command `oq webui start` tries to open a browser tab
    with the WebUI loaded

python-oq-engine (2.4.0-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Now the command `oq export loss_curves/rlz-XXX` works both for the
    `classical_risk` calculator and the `event_based_risk` calculator

  [Daniele Viganò]
  * Remove the default 30 day-old view limit in the WebUI calculation list

  [Michele Simionato]
  * Fixed a broken import affecting the command `oq upgrade_nrml`
  * Made it possible to specify multiple file names in <uncertaintyValue/>
    in the source_model_logic_tree file
  * Reduced the data transfer in the object `RlzsAssoc` and improved the
    postprocessing of hazard curves when the option `--hc` is given
  * Changed the `ruptures.xml` exporter to export unique ruptures
  * Fixed a bug when downloading the outputs from the WebUI on Windows
  * Made `oq info --report` fast again by removing the rupture fine filtering
  * Improved the readibility of the CSV export `dmg_total`