@@ -25,6 +25,7 @@ urlpatterns = [
     url(r'^list$', views.calc),
     url(r'^(\d+)$', views.calc_info),
     url(r'^(\d+)/datastore$', views.get_datastore),
+    url(r'^(\d+)/oqparam$', views.get_oqparam),
     url(r'^(\d+)/status$', views.calc),
     url(r'^(\d+)/results$', views.calc_results),
     url(r'^(\d+)/traceback$', views.get_traceback),
